--- a/app/src/main/res/layout/x_newsfeed_item.xml
+++ b/app/src/main/res/layout/x_newsfeed_item.xml
@@ -45,6 +45,7 @@
                 android:textAlignment="gravity"
                 android:textColor="@color/darkoliveish"
                 android:textSize="25sp"
+                android:paddingBottom="2dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
