--- a/app/src/main/res/values-th/issues.xml
+++ b/app/src/main/res/values-th/issues.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="Register"></string>
+    <string name="log_in"></string>
+    <string name="register_failed_used"></string>
+</resources>
