--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -4,52 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     tools:context=".Activity.UpdateProfileActivity">
 
     <LinearLayout
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="30dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imgAvatarPreview"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/x_box_outline"
+            android:src="@drawable/ic_thumbnail_2"/>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:gravity="center"
+            android:paddingBottom="1dp"
+            android:layout_margin="1dp"
+            android:layout_gravity="center"
+            android:background="@drawable/x_box_outline">
 
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="@string/select_gender"/>
-        <Spinner
-            android:id="@+id/spnGender"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/x_box_outline">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/select_gender"
+                    android:textAlignment="textStart"
+                    android:textSize="15sp"
+
+                    android:layout_marginLeft="20dp"/>
+                <Spinner
+                    android:id="@+id/spnGender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/edAge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textSize="15sp"
+                android:hint="Your age"
+                android:inputType="number" />
+
+            <EditText
+                android:hint="About you"
+                android:id="@+id/edInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textSize="15sp"
+                android:inputType="textPersonName" />
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/edAge"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="date" />
-
-        <EditText
-            android:id="@+id/edInfo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName" />
-
         <Button
+            android:layout_marginTop="10dp"
             android:id="@+id/btnUpdateInfo"
+            android:textSize="20sp"
+            android:background="@drawable/x_box_outline"
+            android:backgroundTint="@color/yellowish"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Update" />
