change of package name

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context="msu.olive.Activity.ChangePasswordActivity">
+    tools:context="msu.roadsafety.Activity.ChangePasswordActivity">
     <ImageView
         android:src="@drawable/ic_change_password"
         android:layout_width="150dp"
