--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="msu.olive.Activity.LoginActivity">
+    tools:context="msu.roadsafety.Activity.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
