--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
-    tools:context="msu.olive.Activity.RegisterActivity">
+    tools:context="msu.roadsafety.Activity.RegisterActivity">
 
     <ImageView
 
