--- a/app/src/main/res/layout/activity_view_user_post.xml
+++ b/app/src/main/res/layout/activity_view_user_post.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_vertical"
-    tools:context="msu.olive.Activity.ViewUserPostActivity">
+    tools:context="msu.roadsafety.Activity.ViewUserPostActivity">
 
     <ScrollView
 
