--- a/app/src/main/res/layout/fragment_games.xml
+++ b/app/src/main/res/layout/fragment_games.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context="msu.olive.Fragment.GamesFragment">
+    tools:context="msu.roadsafety.Fragment.GamesFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
